--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <h1>Daria</h1>
-
     <h2>Tady bude neco o mne.</h2>
+    <p>
+      <img
+        src="https://img.freepik.com/free-photo/front-portrait-of-the-woman-with-beauty-face_186202-6146.jpg?size=626&ext=jpg"
+      />
+    </p>
+    <p>
+      <a href="https://www.linkedin.com/in/daria-skoryk/"> Kontakt </a>
+    </p>
   </body>
 </html>
